--- a/playground/test_tools/test_tool_json.ipynb
+++ b/playground/test_tools/test_tool_json.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "script_dir = os.path.dirname(os.path.abspath(\"\"))\n",
+    "openagent_dir = os.path.dirname(script_dir)\n",
+    "sys.path.append(openagent_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
     "from openagent import compiler\n",
     "from openagent.llms._openai import OpenAI\n",
     "from openagent.tools.toolkits.json_toolkit.json_python import JsonToolkit\n",
@@ -18,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(model=\"gpt-3.5-turbo-16k\", api_key=\"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\")"
+    "llm = OpenAI(model=\"gpt-3.5-turbo-16k\", api_key=\"OpenAI API Key\")"
    ]
   },
   {
@@ -235,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
