--- a/playground/test_newagent.ipynb
+++ b/playground/test_newagent.ipynb
@@ -2,14 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib\n",
+    "import sys\n",
+    "import os\n",
     "\n",
-    "import openagent\n",
-    "importlib.reload(openagent)\n",
+    "openagent_dir = os.path.dirname(os.path.abspath(\"\"))\n",
+    "sys.path.append(openagent_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
     "from openagent import compiler\n",
     "from openagent.agent.completion import TextCompletionAgent\n",
     "from openagent.agent.chat import ChatAgent\n",
@@ -258,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
